Fix alignment in the footer

--- a/css/app.scss
+++ b/css/app.scss
@@ -282,11 +282,14 @@ footer h4 {
 
 footer h4 {
   margin-bottom: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 
   &:before {
     font-family: "foundation-icons";
     font-weight: 300;
-    padding-top: 0.2rem;
     font-size: 3rem;
     color: $swedishGreenBlue;
     padding-left: 0.5rem;
@@ -306,6 +309,14 @@ footer h4 {
   }
 
   &.address:before {
+    display: flex;
+    flex-direction: column;
+    content: "\f172 ";
+  }
+
+  &.address {
+    display: flex;
+    flex-direction: column;
     content: "\f172 ";
   }
 }
